--- a/css/home.css
+++ b/css/home.css
@@ -1,90 +1,60 @@
-body, html {
-    padding:0px;
-    margin:0px;
-    background: url('images/bg.jpg') center;
-    background-size:cover;
-    background-attachment: fixed;
-    text-align:center;
-    color:#fff;
-    line-height: 1.4em;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+* {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 body {
-    padding:10vh 0;
+    background-color: #435165;
 }
-h1 {
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+.login {
+    width: 400px;
+    background-color: #ffffff;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    margin: 100px auto;
+}
+.login h1 {
     text-align: center;
-    font-size: 77px;
-    text-shadow: 0 0px 30px rgba(0, 0, 0, 0.2);
+    color: #5b6574;
+    font-size: 24px;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid #dee0e4;
 }
-h2 {
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size:30px;
-    text-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
-    color:#fff;
+.login form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
 }
-.monthly {
-    box-shadow: 0 13px 40px rgba(0, 0, 0, 0.5);
-    font-size: 0.8em;
+.login form label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #3274d6;
+    color: #ffffff;
 }
-
-input[type="text"] {
+.login form input[type="password"], .login form input[type="text"] {
+    width: 310px;
+    height: 50px;
+    border: 1px solid #dee0e4;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+.login form input[type="submit"] {
+    width: 100%;
     padding: 15px;
-    border-radius: 2px;
-    font-size: 16px;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, 0.5);
-    background: rgba(63, 78, 100, 0.27);
-    color: #fff;
-    width: 250px;
-    box-sizing: border-box;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+   margin-top: 20px;
+    background-color: #3274d6;
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #ffffff;
+    transition: background-color 0.2s;
 }
-input[type="text"]:hover {
-    border: 2px solid rgba(255, 255, 255, 0.7);
-}
-input[type="text"]:focus {
-    border: 2px solid rgba(255, 255, 255, 1);
-    background:#eee;
-    color:#222;
-}
-
-.button {
-    display: inline-block;
-    padding: 15px 25px;
-    margin: 25px 0 75px 0;
-    border-radius: 3px;
-    color: #fff;
-    background: #000;
-    letter-spacing: .4em;
-    text-decoration: none;
-    font-size: 13px;
-}
-.button:hover {
-    background: #3b587a;
-}
-.desc {
-    max-width: 250px;
-    text-align: left;
-    font-size:14px;
-    padding-top:30px;
-    line-height: 1.4em;
-}
-.resize {
-    background: #222;
-    display: inline-block;
-    padding: 6px 15px;
-    border-radius: 22px;
-    font-size: 13px;
-}
-@media (max-height: 700px) {
-    .sticky {
-        position: relative;
-    }
-}
-@media (max-width: 600px) {
-    .resize {
-        display: none;
-    }
+.login form input[type="submit"]:hover {
+  background-color: #2868c7;
+    transition: background-color 0.2s;
 }
